# cpp_renderer

./: CMakeLists.txt  README.md  a_gl.cpp  a_gl.h  geometry.h  main.cpp  model.cpp  model.h  output.tga  test.cpp  tgaimage.h
